--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				<div class="text"><p>© 2024 bighouse.ru</p></div>
 			</div>
 			<div class="footer-section-image"><div class="font-logo"></div></div>
-			<div class="footer-section-add">
+			<div class="footer-section-adds">
 				<div class="text"><p><a href="#" style="text-decoration: none; color: white">«Большой дом»</a></a></p></div>
 				<div class="text">
 					<p><a href="#about" style="text-decoration: none; color: white">О нас</a></p>
@@ -752,7 +752,6 @@ nav{
 	height: auto;
 
 	flex: none;
-	align-self: stretch;
 	flex-grow: 0;
 }
 .carrier-text{
@@ -770,7 +769,6 @@ nav{
 	height: auto;
 
 	flex: none;
-	align-self: stretch;
 	flex-grow: 0;
 }
 .blocks{
@@ -910,20 +908,24 @@ footer{
 	background-size: cover;
 	width: 250px; height: 250px;
 }
-.footer-section-add{
+.footer-section-add, .footer-section-adds{
 	display: flex;
 	flex-direction: column;
 	justify-content: start;
 	align-items: flex-start;
 	padding: 30px 0;
 	gap: 50px;
+	min-width: 420px;
 
 	width: 420px;
 	height: 240px;
 
 	flex: none;
-	align-self: stretch;
 	flex-grow: 1;
+}
+.footer-section-adds{
+	justify-content: start;
+	align-items: center;
 }
 .text p{
 	margin: 2.5px;
