god damn it, iframe

--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@ body, .body{
 }
 html{
 	scroll-behavior: smooth;
-	background: #2D2D2D;
+}
+iframe{
+	background: #2D2D2D;	
 }
 .body{
 	display: flex;
